--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,26 @@ typings/
 # dotenv environment variables file
 .env
 
+# IDE and editor files
+
+## Webstorm
+.idea
+
+## Vim
+### Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+### Session
+Session.vim
+
+### Temporary
+.netrwhist
+*~
+### Auto-generated tag files
+tags
+
+## VS Code
+.vscode
